# AI-Engineer-Learn

./: .gitignore
AIEngineerLearning/: README.md
AIEngineerLearning/00-learning-logs/: 01-python-ai-foundation-logs.md  02-virtualenv-and-env-logs.md  03-http-requests-logs.md  04-pydantic-model-logs.md  06-file-handling-json-logs.md  07-mini-project-prompt-runner-logs.md
AIEngineerLearning/01-python-ai-foundation/: README.md
AIEngineerLearning/02-fullstack-foundation/: README.md
AIEngineerLearning/02-fullstack-foundation/05-file-upload/file-upload/backend/: .env.example  pyproject.toml  requirements-lock.txt
AIEngineerLearning/02-fullstack-foundation/05-file-upload/file-upload/backend/migrations/: env.py
AIEngineerLearning/02-fullstack-foundation/05-file-upload/file-upload/backend/src/app/: config.py  database.py  errors.py  main.py
AIEngineerLearning/02-fullstack-foundation/05-file-upload/file-upload/backend/src/app/files/: dependencies.py  model.py  repository.py  router.py  schemas.py  service.py  storage.py
AIEngineerLearning/02-fullstack-foundation/05-file-upload/file-upload/backend/tests/: test_service.py  test_storage.py
Full stack generative and Agentic AI with python - Udemy/: requirements.txt
Full stack generative and Agentic AI with python - Udemy/hello_world/: openai_model.py
Full stack generative and Agentic AI with python - Udemy/langgraph/: app.py  graph.py  llm.py  tools.py
Full stack generative and Agentic AI with python - Udemy/rag/: chat.py  docker-compose.yml  pdf_processor.py
(+144 files in other folders)
