[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "text-file-upload-api"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.116,<1",
    "uvicorn[standard]>=0.35,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.30,<1",
    "alembic>=1.16,<2",
    "pydantic-settings>=2.10,<3",
    "python-multipart>=0.0.20,<1",
    "aiofiles>=24.1,<25",
    "anyio>=4.9,<5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4,<9",
    "pytest-asyncio>=1.0,<2",
    "httpx>=0.28,<1",
    "ruff>=0.12,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]